css/style.css
/*****************************************************
* CSS Mockup Activity - Custom CSS Stylesheet
* @author rlewis37
*
* Some rules have been included here to give you a head start.
* Create your own custom CSS rules below. Have fun!
******************************************************/
html, body {
	margin: 0;
	box-sizing: border-box;
}

/****
.container {
	margin: 0 auto;
	padding: 0 2rem;
}
***/
.clearfix {
	clear: both;
}

/* create a responsive container */
@media only screen and (min-width: 1200px) {
	.container { width: 1170px; }
}

@media only screen and (min-width: 992px) and (max-width: 1199px) {
	.container { width: 970px; }
}

@media only screen and (min-width: 768px) and (max-width: 991px) {
	.container { width: 750px; }
}

/*****************************************************
* Flexbox Sticky Footer
* http://philipwalton.github.io/solved-by-flexbox/demos/sticky-footer/
******************************************************/

/*corrects IE min-height bug*/
html { display: flex;}
body { width: 100%;}

.sfooter {
	display: flex;
	flex-direction: column;
	min-height: 100vh;
}

.sfooter-content {
	flex: 1 0 auto;
}

/*****************************************************
* ADD YOUR OWN CSS BELOW! (ﾉ◕ヮ◕)ﾉ*:･ﾟ✧
*
* HINT: You might want to be conversant with the following:
* * Shorthand syntax for padding, margin, and borders
* * Display property and values... and the differences between them.
* * The Box Model
* * Pseudo Classes
* * Attribute Selectors
******************************************************/

/** Styled header font, size, and padding **/
header > .container {
	font-family: "Liberation Mono", monospace;
	color: #00fd01;
	background: #333333;
	padding-top: 20px;
	padding-bottom: 20px;
	padding-left: 15%;
	padding-right: 25%;
}

h1 {
	font-size: 25px;
	display: inline;
}

em {
	font-size: 8px;
}

/** Set body font to Liberation Mono **/
body {
	font-family: "Liberation Mono", monospace;
}

/** Changed welcome image size and alignment **/
.container img {
	margin: auto 33%;
	width: 33%;
	height: 33%;
	padding: 10px;
}

/** Added border around Instructions and specified sizing, padding, margin, and alignment of elements **/
.container > .instructions-wrapper {
	display: flex;
	border: 3px solid black;
	margin: auto 10%;
	height: 10%;
	width: 80%;
}

.container > .instructions-wrapper > .instructions-content {
	padding: 5px;
}

.container > .instructions-wrapper > .instructions-content > h2 {
	font-size: 12px;
	padding: 5px;
	width: 225px;
}

.container > .instructions-wrapper > .instructions-content > ol {
	font-size: 8px;
	width: 225px;
}

.container > .instructions-wrapper > img {
	width: 125px;
	height: 100px;
	margin-right: 10em;
	margin-left: 11em;
}

/** Change background color, alignment, font size, and spacing for A Day in the life... **/

.about-me > .container {
	background-color: #0000ff;
	display: flex;
}

